lima/k3s_forwardAuth/authsvc.yaml
kind: Service
apiVersion: v1
metadata:
  name: authsvc
spec:
  type: ExternalName
  externalName: host.lima.internal
